Start using physics engine

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,7 +10,7 @@ dependencies {
   api "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
   api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
-
+  implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
